--- a/contactServlet/src/main/webapp/WEB-INF/web.xml
+++ b/contactServlet/src/main/webapp/WEB-INF/web.xml
@@ -4,5 +4,13 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name> 
+  <servlet>
+  <servlet-name>FileUpload</servlet-name>
+  <servlet-class>com.lxisoft.Contact.servlet.FileUpload</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>FileUpload</servlet-name>
+  <url-pattern>/csvupload</url-pattern>
+  </servlet-mapping>
   
 </web-app>
