--- a/ContactApp1/pom.xml
+++ b/ContactApp1/pom.xml
@@ -26,6 +26,11 @@
     <version>05Nov2002</version>
 </dependency>
 <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.9-rc</version>
+    </dependency>
+<dependency>
     <groupId>commons-fileupload</groupId>
     <artifactId>commons-fileupload</artifactId>
     <version>1.3</version>
