--- a/contactApp/src/main/webapp/WEB-INF/web.xml
+++ b/contactApp/src/main/webapp/WEB-INF/web.xml
@@ -64,4 +64,14 @@
 <url-pattern>/login</url-pattern>  
 </servlet-mapping> 
 
+<servlet>  
+<servlet-name>demo6</servlet-name>  
+<servlet-class>com.lxisoft.contact.controller.LogoutServlet</servlet-class>  
+</servlet> 
+
+<servlet-mapping>  
+<servlet-name>demo6</servlet-name>  
+<url-pattern>/logout</url-pattern>  
+</servlet-mapping> 
+
 </web-app>  
