--- a/contactApp/src/main/resources/db.properties
+++ b/contactApp/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-MYSQL_DB_DRIVER_CLASS=com.mysql.jdbc.Driver
+MYSQL_DB_DRIVER_CLASS=com.mysql.jdbc.jdbc2.optional.MysqlDataSource;
 MYSQL_DB_URL=jdbc:mysql://localhost/contact_db
 MYSQL_DB_USERNAME=root
 MYSQL_DB_PASSWORD=root
