--- a/contactApp/src/main/webapp/WEB-INF/web.xml
+++ b/contactApp/src/main/webapp/WEB-INF/web.xml
@@ -84,5 +84,35 @@
 <url-pattern>/pagination</url-pattern>  
 </servlet-mapping> 
 
+<security-constraint>
+      <web-resource-collection>
+      	<!-- <web-resource-name>contactApp</web-resource-name> -->
+         <url-pattern>/home.jsp</url-pattern>
+         <http-method>GET</http-method>
+         <http-method>POST</http-method>
+      </web-resource-collection>
+      
+      <auth-constraint>
+         <description>
+            Let only admins use this app
+         </description>
+         <role-name>admin</role-name>
+      </auth-constraint>
+   </security-constraint>
+   
+   <security-role>
+      <role-name>admin</role-name>
+   </security-role>
+   
+   <!-- <login-config>
+      <auth-method>BASIC</auth-method>
+   </login-config> -->
 
+   <login-config>
+      <auth-method>FORM</auth-method>
+      <form-login-config>
+         <form-login-page>/index.jsp</form-login-page>
+         <!-- <form-error-page>/error.jsp</form-error-page> -->
+      </form-login-config>
+   </login-config>
 </web-app>  
