--- a/contactApp/src/main/webapp/WEB-INF/web.xml
+++ b/contactApp/src/main/webapp/WEB-INF/web.xml
@@ -110,9 +110,19 @@
 
    <login-config>
       <auth-method>FORM</auth-method>
+      <realm-name>jdbcRealm</realm-name>
       <form-login-config>
          <form-login-page>/index.jsp</form-login-page>
          <!-- <form-error-page>/error.jsp</form-error-page> -->
       </form-login-config>
    </login-config>
+
+ <security-role-mapping>
+<role-name>admin</role-name>
+<group-name>admin</group-name>
+</security-role-mapping>
+<security-role-mapping>
+<role-name>user</role-name>
+<group-name>user</group-name>
+</security-role-mapping>
 </web-app>  
