--- a/contactApp/src/main/webapp/WEB-INF/web.xml
+++ b/contactApp/src/main/webapp/WEB-INF/web.xml
@@ -93,15 +93,16 @@
       </web-resource-collection>
       
       <auth-constraint>
-         <description>
-            Let only admins use this app
-         </description>
+        
          <role-name>admin</role-name>
+         <role-name>user</role-name>
       </auth-constraint>
    </security-constraint>
    
    <security-role>
+   	   <role-name>user</role-name>
       <role-name>admin</role-name>
+   
    </security-role>
    
    <!-- <login-config>
