--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -2,7 +2,7 @@
 
 <servlet>
       <servlet-name>view</servlet-name>
-      <servlet-class>com.lxisoft.ViewServlet</servlet-class>
+      <servlet-class>com.lxisoft.Servlet.ViewServlet</servlet-class>
 </servlet>
 
 <servlet-mapping>
