--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -1,13 +1,15 @@
 <web-app>
 
 <servlet>
-      <servlet-name>name</servlet-name>
+      <servlet-name>ContactView</servlet-name>
       <servlet-class>com.lxisoft.servlets.ViewAllContacts</servlet-class>
 </servlet>
 
-	<servlet-mapping>
-		<servlet-name>name</servlet-name>
-		<url-pattern>/Add</url-pattern>
-    </servlet-mapping>
+<servlet-mapping>
+		<servlet-name>ContactView</servlet-name>
+		<url-pattern>/View</url-pattern>
+</servlet-mapping>
+
+
 
 </web-app>
