--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -1,21 +1,18 @@
 <web-app>
-
-    <servlet>
-       <servlet-name>show</servlet-name>
-       <servlet-class>com.lxisoft.servlet.ShowAllContactServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-       <servlet-name>show</servlet-name>
-       <url-pattern>/url</url-pattern>
-    </servlet-mapping>
-    <servlet>
-       <servlet-name>add contact</servlet-name>
-       <servlet-class>com.lxisoft.servlet.AddContactServlet</servlet-class>
-    </servlet>
-
-    <servlet-mapping>
-       <servlet-name>add contact</servlet-name>
-       <url-pattern>/add</url-pattern>
-    </servlet-mapping>
+<servlet>
+	<servlet-name>show</servlet-name>
+	<servlet-class>com.lxisoft.servlet.ShowAllContactServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>show</servlet-name>
+	<url-pattern>/home</url-pattern>
+</servlet-mapping>
+<servlet>
+	<servlet-name>add contact</servlet-name>
+	<servlet-class>com.lxisoft.servlet.AddContactServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>add contact</servlet-name>
+	<url-pattern>/add</url-pattern>
+</servlet-mapping>
 </web-app>
