--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -15,4 +15,12 @@
 	<servlet-name>add contact</servlet-name>
 	<url-pattern>/add</url-pattern>
 </servlet-mapping>
+<servlet>
+	<servlet-name>get contact</servlet-name>
+	<servlet-class>com.lxisoft.servlet.GetContactByIdServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+	<servlet-name>get contact</servlet-name>
+	<url-pattern>/getContact</url-pattern>
+</servlet-mapping>
 </web-app>
