IN-3348 selected contact display

--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -10,7 +10,7 @@
 </servlet>
 <servlet>
       <servlet-name>CSelect</servlet-name>
-      <servlet-class>com.lxisoft.servlets.SelectedContact</servlet-class>
+      <servlet-class>com.lxisoft.servlets.SelectedServlet</servlet-class>
 </servlet>
 
 <servlet-mapping>
