--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -43,4 +43,24 @@
       <url-pattern>/search</url-pattern>
  </servlet-mapping>
 
+ <servlet>
+      <servlet-name>edit</servlet-name>
+      <servlet-class>com.lxisoft.Servlet.EditServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+      <servlet-name>edit</servlet-name>
+      <url-pattern>/edit</url-pattern>
+ </servlet-mapping>
+
+ <servlet>
+      <servlet-name>delete</servlet-name>
+      <servlet-class>com.lxisoft.Servlet.DeleteServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+      <servlet-name>delete</servlet-name>
+      <url-pattern>/delete</url-pattern>
+ </servlet-mapping>
+
 </web-app>
