--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -4,7 +4,6 @@
    <servlet-name>AllContacts</servlet-name>
    <servlet-class>com.lxisoft.controller.ShowAllServlet</servlet-class>
 </servlet>
-
 <servlet-mapping>
    <servlet-name>AllContacts</servlet-name>
    <url-pattern>/showAll</url-pattern>
@@ -14,10 +13,18 @@
    <servlet-name>save</servlet-name>
    <servlet-class>com.lxisoft.controller.SaveServlet</servlet-class>
 </servlet>
-
 <servlet-mapping>
    <servlet-name>save</servlet-name>
    <url-pattern>/addContact</url-pattern>
+</servlet-mapping>
+
+<servlet>
+   <servlet-name>deleting</servlet-name>
+   <servlet-class>com.lxisoft.controller.DeleteServlet</servlet-class>
+</servlet>
+<servlet-mapping>
+   <servlet-name>deleting</servlet-name>
+   <url-pattern>/delete</url-pattern>
 </servlet-mapping>
 
 
