--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -11,7 +11,6 @@
     </servlet-mapping>
 
 
-
     <servlet>
       <servlet-name>add</servlet-name>
       <servlet-class>com.lxisoft.servlet.AddServ</servlet-class>
@@ -32,6 +31,18 @@
         <servlet-name>selectt</servlet-name>
         <url-pattern>/select</url-pattern>
     </servlet-mapping>
+
+
+    <servlet>
+      <servlet-name>edited</servlet-name>
+      <servlet-class>com.lxisoft.servlet.EditServ</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>edited</servlet-name>
+        <url-pattern>/edit</url-pattern>
+    </servlet-mapping>
+
 
 
 </web-app>
