--- a/ContactApp/contactappv2/WEB-INF/web.xml
+++ b/ContactApp/contactappv2/WEB-INF/web.xml
@@ -14,5 +14,24 @@
         <servlet-name>CompressionFilterTestServlet</servlet-name>
         <url-pattern>/view</url-pattern>
     </servlet-mapping>
+
+        <servlet>
+        <servlet-name>create</servlet-name>
+        <servlet-class>com.lxisoft.contactapp.servelet.ContactAdd</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>create</servlet-name>
+        <url-pattern>/createnew</url-pattern>
+    </servlet-mapping>
    
+           <servlet>
+        <servlet-name>create</servlet-name>
+        <servlet-class>com.lxisoft.contactapp.servelet.Contactsearch</servlet-class>
+    </servlet>
+
+    <servlet-mapping>
+        <servlet-name>create</servlet-name>
+        <url-pattern>/search</url-pattern>
+    </servlet-mapping>
 </web-app>
