--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -1,13 +1,18 @@
+<?xml version="1.0" encoding="ISO-8859-1"?>
+
+<!DOCTYPE web-app
+    PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
+    "http://java.sun.com/dtd/web-app_2_3.dtd">
+
 <web-app>
 
-    <servlet>
-	<servlet-name>show
-		<servlet-class> com.lxisoft.servlet.AllContacts</servlet-class>
-	</servlet-name>
-	</servlet>
-		
-  <servlet-mapping>
-  <servlet-name>show</servlet-name>
-  <url-pattern>/start</url-pattern>
- </servlet-mapping>
+  <servlet>
+    <servlet-name>controlServlet</servlet-name>
+    <servlet-class>com.lxisoft.Servlet.AllContacts</servlet-class>
+  </servlet>
 
+  <servlet-mapping>
+    <servlet-name>controlServlet</servlet-name>
+    <url-pattern>/start</url-pattern>
+  </servlet-mapping>
+</web-app>    
