--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -7,21 +7,23 @@
 <web-app>
 
   <servlet>
-    <servlet-name>controlServlet</servlet-name>
+    <servlet-name>viewall</servlet-name>
     <servlet-class>com.lxisoft.Servlet.AllContacts</servlet-class>
-  </servlet>
-  <servlet>
-    <servlet-name>controlServlet</servlet-name>
-    <servlet-class>com.lxisoft.Servlet.Add</servlet-class>
   </servlet>
 
   <servlet-mapping>
-    <servlet-name>controlServlet</servlet-name>
+    <servlet-name>viewall</servlet-name>
     <url-pattern>/start</url-pattern>
   </servlet-mapping>
 
-    <servlet-mapping>
-    <servlet-name>controlServlet</servlet-name>
+  <servlet>
+    <servlet-name>addcontact</servlet-name>
+    <servlet-class>com.lxisoft.Servlet.Add</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>addcontact</servlet-name>
     <url-pattern>/Add</url-pattern>
   </servlet-mapping>
+
+ 
 </web-app>    
