--- a/ContactApp/WEB-INF/web.xml
+++ b/ContactApp/WEB-INF/web.xml
@@ -6,24 +6,27 @@
 
 <web-app>
 
+    <servlet-mapping>
+    <servlet-name>addcontact</servlet-name>
+    <url-pattern>/add</url-pattern>
+  </servlet-mapping>
+    <servlet-mapping>
+    <servlet-name>viewall</servlet-name>
+    <url-pattern>/start</url-pattern>
+  </servlet-mapping>
+
+
   <servlet>
     <servlet-name>viewall</servlet-name>
     <servlet-class>com.lxisoft.Servlet.AllContacts</servlet-class>
   </servlet>
 
-  <servlet-mapping>
-    <servlet-name>viewall</servlet-name>
-    <url-pattern>/start</url-pattern>
-  </servlet-mapping>
+
 
   <servlet>
     <servlet-name>addcontact</servlet-name>
     <servlet-class>com.lxisoft.Servlet.Add</servlet-class>
   </servlet>
-  <servlet-mapping>
-    <servlet-name>addcontact</servlet-name>
-    <url-pattern>/Add</url-pattern>
-  </servlet-mapping>
 
  
 </web-app>    
