--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -30,6 +30,12 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+           
+        </dependency>
     </dependencies>
     <build>
         <finalName>ContactApp</finalName>
@@ -49,17 +55,16 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.8.0</version>
         </plugin>
-
-        <plugin>
-          <artifactId>maven-project-info-reports-plugin</artifactId>
-          <version>3.0.0</version>
-        </plugin>
         <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
-            </plugin>
-            
+        </plugin>
+           <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>3.0.0-M1</version>
+        </plugin>  
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
             <version>2.2</version>
@@ -69,18 +74,23 @@
             <path>/ContactApp</path>
           </configuration>
       </plugin>
-    <!--   <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.7.6</version>
-        <configuration>
-          <container>
-            <containerId>tomcat9x</containerId>
-            <type>embedded</type>
-          </container>
-        </configuration>
-      </plugin> -->
+ <plugin>
+    <groupId>org.apache.tomcat.maven</groupId>
+    <artifactId>tomcat7-maven-plugin</artifactId>
+    <version>2.2</version>
+    <configuration>
+        <url>http://localhost:8080/manager/text</url>
+        <server>TomcatServer</server>
+
+            <username>admin</username>
+            <password>password</password>
+        <path>/ContactApp</path>
+
+  
+    </configuration>
+</plugin>
         </plugins>
+
     </build>
 
 </project>
