--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -1,23 +1,42 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+     http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.lxisoft.ContactApp</groupId>
+    <artifactId>ContactApp</artifactId>
+    <packaging>war</packaging>
+    <version>1.0-SNAPSHOT</version>
+    <name> Maven Webapp</name>
+    <url>http://maven.apache.org</url>
+    <properties>
+        <!-- https://maven.apache.org/general.html#encoding-warning -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <spring.version>5.1.0.RELEASE</spring.version>
+    </properties>
 
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.lxisoft.app</groupId>
-  <artifactId>ContactApp</artifactId>
-  <packaging>war</packaging>
+    <dependencies>
 
-  <version>1.0-SNAPSHOT</version>
-  <name>ContactApp Maven Webapp</name>
-  <url>http://maven.apache.org</url>
+        
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
+        <!-- junit 5, unit test -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.3.1</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.25</version>
+</dependency>
 
+
+      
 
         <!-- for web servlet -->
         <dependency>
@@ -27,39 +46,41 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- Some containers like Tomcat don't have jstl library -->
-        <dependency>
-            <groupId>javax.servlet</groupId>
-            <artifactId>jstl</artifactId>
-            <version>1.2</version>
-            <scope>provided</scope>
-        </dependency>
+       
+    </dependencies>
+    <build>
+        <finalName>ContactApp</finalName>
+        <plugins>
+            <!-- http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html -->
+            
 
-  </dependencies>
+            <!-- Default is too old, update to latest to run the latest Spring 5 + jUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
 
-
- <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	 <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-  </properties>
-
-  <build>
-<finalName>ContactApp</finalName>
-<!-- Configure the Tomcat Maven plugin -->
-<plugins>
-<plugin>
-  <groupId>org.apache.tomcat.maven</groupId>
-  <artifactId>tomcat7-maven-plugin</artifactId>
-  <version>2.0</version>
-  <configuration>
-    <url>http://localhost:8080/manager/text</url>
-    <server>TomcatServer</server>
+            <!-- Default 2.2 is too old, update to latest -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <server>TomcatServer</server>
                 <username>tomcat</username>
                 <password>secret</password>
                 <path>/ContactApp</path>
-  </configuration>
-</plugin>
-</plugins>
-  </build>
+            </configuration>
+        </plugin>
+
+        </plugins>
+    </build>
+
 </project>
