--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -32,33 +32,45 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+      <dependency>
+         <groupId>mysql</groupId>
+         <artifactId>mysql-connector-java</artifactId>
+         <version>5.1.32</version>
+      </dependency>
+
     </dependencies>
     <build>
         <finalName>ContactApp</finalName>
         <plugins>
             <!-- http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html -->
             <!-- Default is too old, update to latest to run the latest Spring 5 + jUnit 5 -->
-            <plugin>
+           <!--  <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
 
-            <!-- Default 2.2 is too old, update to latest -->
+            Default 2.2 is too old, update to latest
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
-            </plugin>
-            <plugin>
-            <groupId>org.apache.tomcat.maven</groupId>
+            </plugin> -->
+          <plugin>
+              <groupId>org.apache.tomcat.maven</groupId>
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
             <configuration>
-                <url>http://localhost:8080</url>
-                <path>/</path>
+              <url>http://localhost:8080/manager/text</url>
+              
+              <server> TomcatServer</server>
+              <username>admin</username>
+              <password>password</password>
+            
+              <path>/ContactApp</path>
+
             </configuration>
-        </plugin>
+          </plugin>
 
         </plugins>
     </build>
