--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -48,14 +48,14 @@
             
 
             <!-- Default is too old, update to latest to run the latest Spring 5 + jUnit 5 -->
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.0</version>
             </plugin>
-
+ -->
             <!-- Default 2.2 is too old, update to latest -->
-            <plugin>
+            <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.2.2</version>
@@ -68,7 +68,21 @@
                 <url>http://localhost:8080</url>
                 <path>/</path>
             </configuration>
-        </plugin>
+        </plugin> -->
+
+
+    <plugin>
+      <groupId>org.apache.tomcat.maven</groupId>
+      <artifactId>tomcat7-maven-plugin</artifactId>
+      <version>2.2</version>
+      <configuration>
+      <url>http://localhost:8080/manager/text</url>
+      <server>TomcatServer</server>
+      <username>admin</username>
+      <password>password</password>
+      <path>/ContactApp</path>
+      </configuration>
+    </plugin>
 
         </plugins>
     </build>
