--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -72,7 +72,8 @@
             <artifactId>tomcat7-maven-plugin</artifactId>
             <version>2.2</version>
             <configuration>
-                <url>http://localhost:8080</url>
+                <url>http://localhost:8080/</url>
+                <server>TomcatServer</server>
                 <path>/</path>
             </configuration>
         </plugin>
