--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -16,6 +16,12 @@
   <scope>provided</scope>
   </dependency>
 
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.6</version>
+</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -23,7 +29,38 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>ContactApp</finalName>
-  </build>
+ <build>
+        <finalName>ContactApp</finalName>
+        <plugins>
+            <!-- http://www.eclipse.org/jetty/documentation/current/jetty-maven-plugin.html -->
+            
+
+            <!-- Default is too old, update to latest to run the latest Spring 5 + jUnit 5 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+
+            <!-- Default 2.2 is too old, update to latest -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.2</version>
+            </plugin>
+            <plugin>
+            <groupId>org.apache.tomcat.maven</groupId>
+            <artifactId>tomcat7-maven-plugin</artifactId>
+            <version>2.2</version>
+            <configuration>
+                <url>http://localhost:8080/manager/text</url>
+                <server>TomcatServer</server>
+                <username>tomcat</username>
+                <password>tomcat</password>
+                <path>/ContactApp</path>
+            </configuration>
+        </plugin>
+
+        </plugins>
+    </build>
 </project>
