--- a/contactapp/pom.xml
+++ b/contactapp/pom.xml
@@ -33,6 +33,11 @@
 
   <build>
   <plugins>
+        <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.3</version>
+		</plugin>
   <plugin>
 		<groupId>org.apache.tomcat.maven</groupId>
 		<artifactId>tomcat7-maven-plugin</artifactId>
@@ -40,7 +45,7 @@
 		<configuration>
 			<url>http://localhost:8080/manager/text</url>
 			<server>TomcatServer</server>
-			<path>/mkyongWebApp</path>
+			<path>/contactapp</path>
 		</configuration>
 	</plugin>	
  </plugins>
