--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -48,17 +48,11 @@
             <version>2.2</version>
             <configuration>
               <url>http://localhost:8080/manager/text</url>
-              
-              <server> TomcatServer</server>
-              <username>admin</username>
+              <username>pass</username>
               <password>password</password>
-            
               <path>/ContactApp</path>
-
             </configuration>
           </plugin>
-
         </plugins>
     </build>
-
 </project>
