--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.6</version>
+            <version>5.1.19</version>
            
         </dependency>
     </dependencies>
@@ -67,12 +67,12 @@
         </plugin>  
         <plugin>
           <artifactId>maven-war-plugin</artifactId>
-            <version>2.2</version>
-            <configuration>
+            <version>3.2.2</version>
+            <!-- <configuration>
             <url>http://localhost:8080/manager/text</url>
             <server>TomcatServer</server>
             <path>/ContactApp</path>
-          </configuration>
+          </configuration> -->
       </plugin>
  <plugin>
     <groupId>org.apache.tomcat.maven</groupId>
@@ -81,15 +81,13 @@
     <configuration>
         <url>http://localhost:8080/manager/text</url>
         <server>TomcatServer</server>
-
+        <update>true</update>
+        <path>/ContactApp</path>
             <username>admin</username>
             <password>password</password>
-        <path>/ContactApp</path>
-
-  
-    </configuration>
+ </configuration>
 </plugin>
-        </plugins>
+ </plugins>
 
     </build>
 
