http://jira.bytatech.com:8080/browse/IN-4366

--- a/ContactApp/src/main/webapp/WEB-INF/web.xml
+++ b/ContactApp/src/main/webapp/WEB-INF/web.xml
@@ -71,11 +71,13 @@
       </web-resource-collection>
       <auth-constraint>
          <role-name>user</role-name>
+         <role-name>admin</role-name>
       </auth-constraint>
    </security-constraint>
 
    <security-role>
       <role-name>user</role-name>
+      <role-name>admin</role-name>
    </security-role>
    <login-config>
       <auth-method>BASIC</auth-method>
