--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -79,7 +79,36 @@
                 <path>/ContactApp</path>
             </configuration>
         </plugin>
-
+<plugin>
+    <artifactId>maven-resources-plugin</artifactId>
+    <version>3.0.2</version>
+    <executions>
+        <execution>
+            <id>process-resources</id>
+            <phase>process-resources</phase>
+            <goals>
+                <goal>resources</goal>
+            </goals>
+            <configuration>
+        <outputDirectory>${project.build.directory}/ContactApp</outputDirectory>
+                <resources>
+                    <resource>
+                        <directory>${basedir}/src/main/resources/</directory>
+                        <includes>
+                            <include>*</include>
+                        </includes>
+                    </resource>
+					<resource>
+                        <directory>${basedir}/src/main/resources/images</directory>
+                        <includes>
+                            <include>*</include>
+                        </includes>
+                    </resource>
+                </resources>
+            </configuration>
+        </execution>
+    </executions>
+</plugin>
         </plugins>
     </build>
 
