http://34.73.62.124:8080/browse/IN-4541

--- a/ContactApp111/WEB-INF/web.xml
+++ b/ContactApp111/WEB-INF/web.xml
@@ -8,25 +8,30 @@
 
     <servlet-mapping>
     <servlet-name>addcontact</servlet-name>
-    <url-pattern>/add</url-pattern>
+    <url-pattern>/add </url-pattern>
   </servlet-mapping>
+
+  <servlet>
+    <servlet-name>addcontact</servlet-name>
+    <servlet-class>com.lxisoft.Servlet.Search</servlet-class>
+  </servlet>
+  
     <servlet-mapping>
     <servlet-name>viewall</servlet-name>
     <url-pattern>/start</url-pattern>
   </servlet-mapping>
-
-
   <servlet>
     <servlet-name>viewall</servlet-name>
     <servlet-class>com.lxisoft.Servlet.AllContacts</servlet-class>
   </servlet>
 
-
+   <servlet-mapping>
+    <servlet-name>search</servlet-name>
+    <url-pattern>/start</url-pattern>
+  </servlet-mapping>
 
   <servlet>
-    <servlet-name>addcontact</servlet-name>
-    <servlet-class>com.lxisoft.Servlet.Add</servlet-class>
-  </servlet>
-
- 
-</web-app>    
+  <servlet-name>search</servlet-name>
+  <servlet-class>com.lxisoft.Servlet.Search</servlet-class>
+</servlet>
+</web-app>
