--- a/contactapp/pom.xml
+++ b/contactapp/pom.xml
@@ -43,6 +43,7 @@
 		<artifactId>tomcat7-maven-plugin</artifactId>
 		<version>2.2</version>
 		<configuration>
+			<update>true</update>
 			<url>http://localhost:8080/manager/text</url>
 			<server>TomcatServer</server>
 			<path>/contactapp</path>
