--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -12,7 +12,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring.version>5.1.0.RELEASE</spring.version>
+        <servlet.version>3.1.0</servlet.version>
+        <jstl.version>1.2</jstl.version>
     </properties>
     <dependencies>
 
@@ -36,6 +37,20 @@
             <version>5.1.19</version>
            
         </dependency>
+
+         <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
+        </dependency>
+ 
+        <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${servlet.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      
     </dependencies>
     <build>
         <finalName>ContactApp</finalName>
