--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -15,8 +15,9 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <spring.version>5.1.0.RELEASE</spring.version>
+    <servlet.version>3.1.0</servlet.version>
+    <jstl.version>1.2</jstl.version>
     </properties>
-
     <dependencies>
         <!-- junit 5, unit test -->
         <dependency>
@@ -37,7 +38,11 @@
          <artifactId>mysql-connector-java</artifactId>
          <version>5.1.32</version>
       </dependency>
-
+      <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>1.2</version>
+    </dependency>
     </dependencies>
     <build>
         <finalName>ContactApp</finalName>
