--- a/contactapp/pom.xml
+++ b/contactapp/pom.xml
@@ -7,6 +7,13 @@
   <version>1.0-SNAPSHOT</version>
   <name>contactapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+  <properties>
+    <servlet.version>3.1.0</servlet.version>
+    <jstl.version>1.2</jstl.version>
+</properties>
+  
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -27,6 +34,20 @@
     <version>3.1.0</version>
     <scope>provided</scope>
 </dependency>
+
+
+ <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
+    </dependency>
+ 
+    <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${servlet.version}</version>
+        <scope>provided</scope>
+    </dependency>
 
     </dependencies>	
 	
