--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -1,6 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   
+<properties>
+    <servlet.version>3.1.0</servlet.version>
+    <jstl.version>1.2</jstl.version>
+</properties>
+
+
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.lxisoft.ContactApp</groupId>
   <artifactId>ContactApp</artifactId>
@@ -10,12 +16,18 @@
   <url>http://maven.apache.org</url>
   <dependencies>
     
+     <dependency>
+        <groupId>jstl</groupId>
+        <artifactId>jstl</artifactId>
+        <version>${jstl.version}</version>
+     </dependency>
+
     <dependency>
-  <groupId>javax.servlet</groupId>
-  <artifactId>servlet-api</artifactId>
-  <version>2.5</version>
-  <scope>provided</scope>
-  </dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <version>${servlet.version}</version>
+        <scope>provided</scope>
+    </dependency>
 
 <dependency>
     <groupId>mysql</groupId>
