--- a/my-app/pom.xml
+++ b/my-app/pom.xml
@@ -6,8 +6,8 @@
 
   <packaging>war</packaging>
   <groupId>com.mycompany.app</groupId>
-  <artifactId>my-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <artifactId>contactApp</artifactId>
+  <version>1.0</version>
 
   <name>my-app</name>
   <!-- FIXME change it to the project's website -->
@@ -78,6 +78,17 @@
           <artifactId>maven-project-info-reports-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
+        <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <version>2.2</version>
+        <configuration>
+          <url>http://localhost:8089/manager/text</url>
+          <path>/contactApp</path>
+           <server>integration-tomcat</server>
+        </configuration>
+      </plugin>
+        
       </plugins>
     </pluginManagement>
   </build>
