--- a/Dictionary-hackathon/dictionary/pom.xml
+++ b/Dictionary-hackathon/dictionary/pom.xml
@@ -8,14 +8,19 @@
   <name>dictionary Maven Webapp</name>
   <url>http://maven.apache.org</url>
 
+  <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+
   <dependencies>
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.25</version>
         </dependency>
-        <!-- for web servlet -->
+       
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -46,3 +51,4 @@
         </plugin></plugins>
   </build>
 </project>
+
