--- a/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
+++ b/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,15 @@
 		<url-pattern>/view</url-pattern>
 </servlet-mapping>
  <servlet>
+      <servlet-name>Dview</servlet-name>
+      <servlet-class>com.lxisoft.servlets.AddServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+		<servlet-name>DAdd</servlet-name>
+		<url-pattern>/Add</url-pattern>
+</servlet-mapping>
+ <servlet>
       <servlet-name>Dselect</servlet-name>
       <servlet-class>com.lxisoft.servlets.SelectServlet</servlet-class>
 </servlet>
@@ -53,10 +62,10 @@
    </security-role>
    <login-config>
       <auth-method>FORM</auth-method>
-      <!-- <realm-name>login</realm-name> -->
+ 
       <form-login-config>
-         <form-login-page>/view.jsp</form-login-page>
-         <!-- <form-error-page>/Error.jsp</form-error-page> -->
+         <form-login-page>/index.jsp</form-login-page>
+       
       </form-login-config>
    </login-config>
 </web-app>
