--- a/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
+++ b/Dictionary-hackathon/src/main/webapp/WEB-INF/web.xml
@@ -15,7 +15,7 @@
 		<url-pattern>/view</url-pattern>
 </servlet-mapping>
  <servlet>
-      <servlet-name>Dview</servlet-name>
+      <servlet-name>DAdd</servlet-name>
       <servlet-class>com.lxisoft.servlets.AddServlet</servlet-class>
 </servlet>
 
@@ -32,19 +32,11 @@
 		<servlet-name>Dselect</servlet-name>
 		<url-pattern>/select</url-pattern>
 </servlet-mapping>
-<servlet>
-      <servlet-name>Display</servlet-name>
-      <servlet-class>com.lxisoft.servlets.WordServlet</servlet-class>
-</servlet>
 
-<servlet-mapping>
-		<servlet-name>Display</servlet-name>
-		<url-pattern>/word</url-pattern>
-</servlet-mapping>
 <security-constraint>
       <web-resource-collection>
          <web-resource-name>login</web-resource-name>
-         <url-pattern>/View</url-pattern>
+         <url-pattern>/view</url-pattern>
          <http-method>GET</http-method>
          <http-method>POST</http-method>
       </web-resource-collection>
@@ -54,17 +46,18 @@
             Let only admin use this app
          </description>
          <role-name>admin</role-name>
+
       </auth-constraint>
 </security-constraint>
   <security-role>
       <role-name>admin</role-name>
-        
+       
    </security-role>
    <login-config>
       <auth-method>FORM</auth-method>
  
       <form-login-config>
-         <form-login-page>/index.jsp</form-login-page>
+         <form-login-page>/login.jsp</form-login-page>
        
       </form-login-config>
    </login-config>
