--- a/dictionary/pom.xml
+++ b/dictionary/pom.xml
@@ -5,7 +5,7 @@
   <artifactId>dictionary</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>contactapp Maven Webapp</name>
+  <name>dictionary Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
   <properties>
