--- a/ContactApp/pom.xml
+++ b/ContactApp/pom.xml
@@ -18,7 +18,12 @@
     </properties>
 
     <dependencies>
-
+        <!-- log4j dependency -->
+        <dependency>
+            <groupId>log4j</groupId>
+                <artifactId>log4j</artifactId>
+            <version>1.2.17</version>
+        </dependency>
         
 
         <!-- junit 5, unit test -->
