--- a/Dictionary-hackthon/src/main/webapp/WEB-INF/web.xml
+++ b/Dictionary-hackthon/src/main/webapp/WEB-INF/web.xml
@@ -34,6 +34,7 @@
     <web-resource-collection>
         <web-resource-name>dictionary</web-resource-name>
         <url-pattern>/admin</url-pattern>
+        <url-pattern>/AddWord.jsp</url-pattern>
         <http-method>GET</http-method>
         <http-method>POST</http-method>
     </web-resource-collection>
