http://jira.bytatech.com:8080/browse/IN-6362

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   
 <servlet-mapping>  
 <servlet-name>servlet</servlet-name>  
-<url-pattern>/Question</url-pattern>  
+<url-pattern>/QuestionServlet</url-pattern>  
 </servlet-mapping>  
   
 </web-app>  
