http://jira.bytatech.com:8080/browse/IN-6381

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -1,7 +1,7 @@
 <web-app> 
     <servlet> 
          <servlet-name>Servlet</servlet-name> 
-         <servlet-class>com.lxisoft.servlet</servlet-class> 
+         <servlet-class>com.lxisoft.servlet.Servlet</servlet-class> 
     </servlet> 
     <servlet-mapping> 
          <servlet-name>Servlet</servlet-name> 
