http://jira.bytatech.com:8080/browse/IN-6463

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -10,6 +10,17 @@
     <url-pattern>/Home</url-pattern>
   </servlet-mapping>
 
+
+  <servlet>
+    <servlet-name>OptionServlet</servlet-name>
+    <servlet-class>com.lxisoft.Controler.OptionServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>OptionServlet</servlet-name>
+    <url-pattern>/Option</url-pattern>
+  </servlet-mapping>
+
   <servlet>
     <servlet-name>TestServlet</servlet-name>
     <jsp-file>/index.jsp</jsp-file>
