http://jira.bytatech.com:8080/browse/IN-6570

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -7,4 +7,13 @@
          <servlet-name>Servlet</servlet-name> 
          <url-pattern>/check</url-pattern> 
     </servlet-mapping> 
+
+    <servlet> 
+         <servlet-name>Servlet</servlet-name> 
+         <servlet-class>com.lxisoft.servlet.Servlet</servlet-class> 
+    </servlet> 
+    <servlet-mapping> 
+         <servlet-name>Servlet</servlet-name> 
+         <url-pattern>/check</url-pattern> 
+    </servlet-mapping> 
 </web-app> 
