http://jira.bytatech.com:8080/browse/IN-6768

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -42,6 +42,16 @@
   </servlet-mapping>
 
   <servlet>
+    <servlet-name>UpdateServlet</servlet-name>
+    <servlet-class>com.lxisoft.Controler.UpdateServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>UpdateServlet</servlet-name>
+    <url-pattern>/Update</url-pattern>
+  </servlet-mapping>
+
+  <servlet>
     <servlet-name>TestServlet</servlet-name>
     <jsp-file>/index.jsp</jsp-file>
   </servlet>
