http://jira.bytatech.com:8080/browse/IN-6871

--- a/MockExam/WEB-INF/web.xml
+++ b/MockExam/WEB-INF/web.xml
@@ -52,6 +52,17 @@
 <servlet-name>viewservlet</servlet-name>  
 <url-pattern>/ViewServlet</url-pattern>  
 </servlet-mapping>
+
+<servlet>  
+<servlet-name>deleteservlet</servlet-name>  
+<servlet-class>com.lxisoft.Control.DeleteServlet</servlet-class>  
+</servlet>  
+  
+<servlet-mapping>  
+<servlet-name>deleteservlet</servlet-name>  
+<url-pattern>/DeleteServlet</url-pattern>  
+</servlet-mapping>
+
  
  
 </web-app>  
